--- a/app/package.json
+++ b/app/package.json
@@ -4,23 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "supervisor src/server/index.js",
-    "webpack": "webpack --mode development --watch --display-error-details --config webpack.config.js",
-    "test": "mocha --compilers babel-core/register ./test/*test.js"
+    "start": "supervisor -w ./src/server/ ./src/server/index.js",
+    "webpack-old": "webpack-dev-server --mode development --watch  --config webpack.config.js",
+    "webpack-dev": "webpack-dev-server",
+    "test": "mocha --compilers babel-core/register ./test/*test.js",
+    "server": "node src/server/index.js",
+    "build": "webpack --config webpack.prod.js",
+    "production": "bash ./run_production.sh",
+    "dev": "bash ./run_dev.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-grid-system": "*"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
+    "babel-cli": "*",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.11",
@@ -29,8 +37,14 @@
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "postcss-loader": "*",
     "node-nmap": "*",
     "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "*",
+    "webpack-hot-middleware": "*",
+    "precss": "*",
+    "gulp-autoprefixer": "*",
+    "webpack-merge": "*"
   }
 }
