--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "webpack-dev": "webpack-dev-server",
     "test": "mocha --compilers babel-core/register ./test/*test.js",
     "server": "node src/server/index.js",
-    "build": "webpack --config webpack.prod.js",
+    "build-webpack": "webpack --config webpack.prod.js",
+    "build-arm-docker": "docker build -t arm_build -f ./../Dockerfile.arm .. && docker save arm_build -o ../arm_build/arm_build.dimg",
     "production": "bash ./run_production.sh",
     "dev": "bash ./run_dev.sh"
   },
@@ -23,7 +24,8 @@
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-grid-system": "*"
+    "react-grid-system": "*",
+    "node-nmap": "*"
   },
   "devDependencies": {
     "babel-cli": "*",
@@ -38,7 +40,6 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "postcss-loader": "*",
-    "node-nmap": "*",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "*",
